--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ button{
 	color: RGB(255, 255, 255) !important;	
 }
 .fill-screen{
-    padding: 5rem;
     background-size: cover;
     background-position: center;
 }
@@ -78,6 +77,15 @@ button{
         justify-content: center;
         align-content: center;
     }
+    .arrow-left{
+     left: 20%;
+    } 
+    .arrow-right{
+        right: 20%;
+    }
+    .story{
+        font-size: 1.5rem;
+    }
 }
 @media screen and (max-width:768px){
     .navbar-text{
@@ -90,8 +98,8 @@ button{
     .home{
         margin-top: -6px;
     }
-    .fixed-attachment{
-        background-attachment: scroll;
+    .arrow-right{
+        right: 0%;
     }
 }
 
@@ -182,11 +190,8 @@ button{
     border-radius: 0 0.2rem 0.2rem 0;
     user-select: none;
 }
-.arrow-left{
-    left: 20%;
-}
+
 .arrow-right{
-    right: 20%;
     border-radius: 0.2rem 0 0 0.2rem;
 }
 .arrow-left:hover, .arrow-right:hover{
@@ -220,3 +225,37 @@ button{
     from{opacity: 0.5;}
     to{opacity: 1;}
 }
+.container4{
+    position: relative;
+}
+.container6::before{
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    background-color:white;
+    opacity: 0.4;
+}
+.container7{
+    position: relative;
+}
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 1rem; /* Place the button at the bottom of the page */
+    right: 1rem; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: black; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 1.3rem; /* Some padding */
+    border-radius: 0.5rem; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  #myBtn:hover {
+    background-color: RGBA(20, 25, 20,0.5); 
+  }
