--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 body{
     font-family: 'Open Sans', sans-serif;
     padding-top: 3rem;
@@ -46,7 +50,8 @@ button{
 	color: RGB(255, 255, 255) !important;	
 }
 .fill-screen{
-    height: 70vh;
+    height: 90vh;
+    background-color: RGBA(136, 193, 247,0.9);
     background-size: cover;
     background-position: center;
 }
@@ -65,7 +70,17 @@ button{
     font-size: 2rem;
 }
 .side-picture{
-    width: 100%;
+    padding: 0.5rem;
+    transition:all 0.3s linear;
+}
+ img{
+    width: 90%;
+}
+.side-picture:hover{
+    -webkit-transform:rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform:rotate(360deg);
 }
 @media screen and (min-width:768px){
     .hide{
@@ -84,8 +99,14 @@ button{
         padding-bottom: 20px;
         padding-top: 20px;
     }
-    .container7{
-        padding: 3rem;
+    .rowe{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-content: center;
+    }
+    .leftt{
+        text-align: left;
     }
     .wordCarousel{
         display: flex;
@@ -102,7 +123,7 @@ button{
         font-size: 1.5rem;
     }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .navbar-text{
         display: none;
     }
@@ -117,6 +138,9 @@ button{
     }
     .arrow-right{
         right: 0%;
+    }
+    .leftt{
+        text-align: center;
     }
 }
 
