--- a/style.css
+++ b/style.css
@@ -96,18 +96,9 @@ button{
     .navbar{
         padding:1rem 15px;
     }
-    .side{
-        text-align: left;
-    }
     .navbar-transparant{
         padding-bottom: 20px;
         padding-top: 20px;
-    }
-    .mid{
-        margin-top: 5rem;
-    }
-    .mid > h2{
-        padding: 3rem;
     }
     .liste{
         margin-bottom: 55px;
@@ -162,7 +153,10 @@ button{
         margin:1rem auto;
     }
 }
-
+.side{
+    width: 50vw; 
+   margin: 0 auto;
+}
 .wordCarousel {
     font-size: 36px;
     font-weight: 100;
@@ -228,7 +222,7 @@ button{
 }
 .gallery{
     width: 100%;
-    height: 70vh;
+    height: 50vh;
   
 }
 .slides{
