--- a/style.css
+++ b/style.css
@@ -5,10 +5,14 @@
 body{
     font-family: 'Open Sans', sans-serif;
     padding-top: 3rem;
+    position: relative;
+}
+.mail:hover{
+    text-decoration-line: none;
 }
 footer{
-    background-color: #333;
-    color: honeydew;
+    background-color: rgb(15, 15, 15);
+    color:white;
     padding: 1.2rem;
 }
 input::placeholder{
@@ -18,15 +22,14 @@ button{
     border: none;
     border-radius: 0.5rem;
     padding: 0.5rem;
-    color: cornsilk;
+    color: white;
 }
 .display-4{
     text-transform: capitalize;
     text-align: center; 
-    color:rgb(211, 194, 194);
 }
 .navbar-dark .navbar-nav .nav-link {
-    color:rgb(211, 194, 194);
+    color:white;
 }
 .brand-logo{
     width: 100%;
@@ -38,7 +41,7 @@ button{
 .logo{
     width: 7rem;
     margin: 0;
-    padding: 10px;
+    padding: 1rem;
 }
 .navbar-transparant {
     background-color: RGBA(0,0,0, 0.5) !important;	
@@ -48,12 +51,6 @@ button{
 .navbar-transparant .navbar-nav .nav-link
  {
 	color: RGB(255, 255, 255) !important;	
-}
-.fill-screen{
-    height: 90vh;
-    background-color: RGB(136, 193, 247);
-    background-size: cover;
-    background-position: center;
 }
 .social-media{
     display: flex;
@@ -70,7 +67,7 @@ button{
     font-size: 2rem;
 }
 .side-picture{
-    padding: 0.5rem;
+    width: 70%;
     transition:all 0.3s linear;
 }
  img{
@@ -83,8 +80,18 @@ button{
     transform:rotate(360deg);
 }
 .bg-infor{
+    text-align: center;  
+}
+
+.down-button{ 
+    width: 100%;
     text-align: center;
-   
+}
+.down-button i{
+    color: rgb(50, 96, 248);
+}
+.down-button i:hover{
+    color: rgb(12, 42, 209);
 }
 @media screen and (min-width:768px){
     .hide{
@@ -108,11 +115,13 @@ button{
         grid-template-columns: 1fr 1fr;
         justify-items: center;
         align-items: center;
+        margin-top: 1rem;
     }
     .leftt{
         text-align: left;
-        align-self: center;
+        align-self: start;
     }
+
     .wordCarousel{
         display: flex;
         justify-content: center;
@@ -127,15 +136,15 @@ button{
     .story{
         font-size: 1.5rem;
     }
-    .logoe{
-        margin:0.5rem 3rem;
-    }
     .side{
         width: 50vw; 
        margin: 0 auto;
     }
+    .carousel-item{
+        height: 70vh;
+    }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:767px){
     .navbar-text{
         display: none;
     }
@@ -145,21 +154,22 @@ button{
     .gallery{
         width: 100%;
     }
-    .home{
-        margin-top: -6px;
-    }
     .arrow-right{
         right: 0%;
     }
     .leftt{
         text-align: center;
     }
-    .logoe{
-        margin:1rem auto;
-    }
     .side{
         width: 70vw; 
        margin: 0 auto;
+    }
+    .rowe,.bag{
+        margin-top: 1rem;
+
+    }
+    .carousel-item{
+        height: 70vh;
     }
 }
 
@@ -319,11 +329,12 @@ button{
   #myBtn:hover {
     background-color: RGBA(20, 25, 20,0.5); 
   }
-  .logoe{
+  .brand-image{
       border-radius:50% ;
       border: solid ;
       width: 7rem;
       padding: 1rem;
+      margin: 0.5rem auto;
   }
   .star{
       color: gold;
