--- a/style.css
+++ b/style.css
@@ -6,12 +6,13 @@ body{
     font-family: 'Open Sans', sans-serif;
     padding-top: 3rem;
     position: relative;
+    scroll-behavior: smooth;
 }
 .mail:hover{
     text-decoration-line: none;
 }
 footer{
-    background-color: rgb(15, 15, 15);
+    background-color:black;
     color:white;
     padding: 1.2rem;
 }
@@ -140,7 +141,7 @@ button{
         width: 50vw; 
        margin: 0 auto;
     }
-    .carousel-item{
+    .carousel-height{
         height: 70vh;
     }
 }
@@ -168,7 +169,7 @@ button{
         margin-top: 1rem;
 
     }
-    .carousel-item{
+    .carousel-height{
         height: 70vh;
     }
 }
