--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 footer{
     background-color:black;
     color:white;
-    padding: 1.2rem;
+    padding: 1rem;
 }
 input::placeholder{
     text-transform: uppercase;
@@ -41,8 +41,6 @@ button{
 }
 .logo{
     width: 7rem;
-    margin: 0;
-    padding: 1rem;
 }
 .navbar-transparant {
     background-color: RGBA(0,0,0, 0.5) !important;	
@@ -143,6 +141,9 @@ button{
     }
     .carousel-height{
         height: 70vh;
+    }
+    .logo{
+        padding: 1rem;
     }
 }
 @media screen and (max-width:767px){
@@ -315,7 +316,7 @@ button{
 #myBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
-    bottom: 1rem; /* Place the button at the bottom of the page */
+    bottom: 3rem; /* Place the button at the bottom of the page */
     right: 1rem; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
@@ -323,9 +324,9 @@ button{
     background-color: black; /* Set a background color */
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 1.3rem; /* Some padding */
+    padding: 0.7rem; /* Some padding */
     border-radius: 0.5rem; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+    font-size: 1rem; /* Increase font size */
   }
   #myBtn:hover {
     background-color: RGBA(20, 25, 20,0.5); 
