--- a/style.css
+++ b/style.css
@@ -93,6 +93,13 @@ button{
 .down-button i:hover{
     color: rgb(12, 42, 209);
 }
+.alert{
+    text-align: center;
+    padding: 1rem;
+    background-color: rgb(101, 187, 221);
+    color: white;
+    display: none;
+}
 @media screen and (min-width:768px){
     .hide{
         display: none;
